--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,11 +7,13 @@ android {
     compileSdk 31
 
     defaultConfig {
-        applicationId "com.polygraphic"
+
+        /*=config*/
+//      applicationId "com.polygraphic"
+//      versionCode 1
+//      versionName "1.0"
         minSdk 16
         targetSdk 31
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -32,7 +34,7 @@ android {
 }
 
 dependencies {
-
+    /*=dependencies*/
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
