--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.polygraphic">
 
+    <!--=permission-->
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
