include all necessary files

--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
     "@typescript-eslint/parser": "^5.15.0",
     "eslint": "^8.11.0",
     "typescript": "^4.6.2"
-  }
+  },
+  "files": [
+    "android",
+    "dist"
+  ]
 }
